--- a/style.css
+++ b/style.css
@@ -34,3 +34,14 @@ button {
   border-radius: 7px;
   box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
 }
+
+/* reverse the gradient when hovering over */
+button:hover {
+  background: linear-gradient(to bottom, #696969, #575757);
+}
+
+/* button to move down when clicked and to reduce box-shadow*/
+button:active {
+  transform: translateY(3px);
+  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.3);
+}
